test/libsolidity/syntaxTests/storageLayoutSpecifier/negative_number.sol
contract A layout at -1 {}
// ----
// UnimplementedFeatureError 1834: (0-26): Code generation is not supported for contracts with specified storage layout base.
